# WhackAStoodentServer

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
dependencies/: CMakeLists.txt
dependencies/enet/: CMakeLists.txt  enet.h
dependencies/span-lite/: CMakeLists.txt  span.hpp
dependencies/stduuid/: CMakeLists.txt  uuid.h
include/: CMakeLists.txt
include/Abstract/: ASerializableMessage.hpp  CMakeLists.txt
include/Enumerators/: CMakeLists.txt  EDenyPlayRequestReason.hpp  EDisconnectionReason.hpp  EErrorType.hpp  ELogLevel.hpp  ELookHole.hpp  EMessageType.hpp  EPlayerRole.hpp
include/Exceptions/: CMakeLists.txt  DeserializationFailedException.hpp  ENetInitializationFailedException.hpp  ENetPeerSendFailedException.hpp  InvalidNetworkPortException.hpp
include/Interfaces/: CMakeLists.txt  IMessageParser.hpp  ISerializable.hpp  ISerializableMessage.hpp
include/Messages/: AcceptPlayRequestMessage.hpp  AcknowledgeAuthentificationMessage.hpp  AuthenticateMessage.hpp  CMakeLists.txt  DenyAuthentificationMessage.hpp  DenyPlayRequestMessage.hpp  EndGameMessage.hpp  ErrorMessage.hpp  GetMatchHistoryMessage.hpp  HideMessage.hpp  HitFailMessage.hpp  HitMessage.hpp  HitSuccessMessage.hpp  LoadedGameMessage.hpp  LogMessage.hpp  LookMessage.hpp  MatchHistoryMessage.hpp  PingMessage.hpp  PlayWithRandomMessage.hpp  PlayWithSessionCodeMessage.hpp  PongMessage.hpp  RequestPlayMessage.hpp  ScoreMoleMessage.hpp  StartedGameMessage.hpp
include/Misc/: Bans.hpp  CMakeLists.txt  ConcurrentQueue.hpp  Event.hpp  Game.hpp  Games.hpp  Hole.hpp  Lobby.hpp  MatchHistoryEntry.hpp  Message.hpp  MessageParser.hpp  Peer.hpp  Server.hpp  User.hpp  Vector2D.hpp
include/Static/: CMakeLists.txt  CollectionSerializer.hpp  Defaults.hpp  ENetInitializer.hpp  IPUtilities.hpp  NumericCollectionSerializer.hpp  NumericSerializer.hpp  Program.hpp  Rules.hpp  SessionCodes.hpp  StringSerializer.hpp  StringUtilities.hpp  UUIDs.hpp
src/: CMakeLists.txt  main.cpp
src/Exceptions/: CMakeLists.txt  DeserializationFailedException.cpp  ENetInitializationFailedException.cpp  ENetPeerSendFailedException.cpp  InvalidNetworkPortException.cpp
src/Messages/: AcceptPlayRequestMessage.cpp  AcknowledgeAuthentificationMessage.cpp  AuthenticateMessage.cpp  CMakeLists.txt  DenyAuthentificationMessage.cpp  DenyPlayRequestMessage.cpp  EndGameMessage.cpp  ErrorMessage.cpp  GameLoadMessage.cpp  GetMatchHistoryMessage.cpp  HideMessage.cpp  HitFailMessage.cpp  HitMessage.cpp  HitSuccessMessage.cpp  LoadedGameMessage.cpp  LogMessage.cpp  LookMessage.cpp  MatchHistoryMessage.cpp  PingMessage.cpp  PlayWithRandomMessage.cpp  PlayWithSessionCodeMessage.cpp  PongMessage.cpp  RequestPlayMessage.cpp  ScoreMoleMessage.cpp  StartedGameMessage.cpp
src/Misc/: Bans.cpp  CMakeLists.txt  Game.cpp  Games.cpp  Hole.cpp  Lobby.cpp  MatchHistoryEntry.cpp  Message.cpp  Peer.cpp  Server.cpp  User.cpp
src/Static/: CMakeLists.txt  ENetInitializer.cpp  IPUtilities.cpp  Program.cpp  SessionCodes.cpp  StringUtilities.cpp  UUIDs.cpp
